# tweet-to-icon-gan

./: .gitignore  README.md  main.py  pyproject.toml
lib/: dataloader.py  gan.py  trainer.py
